--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,12 @@ jobs:
 
       - name: Tests
         run: go test -cover -v ./...
+
+      - name: install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run gosec
+        run: gosec ./...
   style:
     name: Style 
     runs-on: ubuntu-latest
@@ -42,3 +48,4 @@ jobs:
       - uses: dominikh/staticcheck-action@v1
         with:
           version: "latest"
+  
