--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,3 +18,17 @@ jobs:
 
       - name: Build
         run: ./scripts/buildprod.sh
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+      
+      - name: 'Build & Push Docker Image'
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely:latest .
