--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,3 +32,6 @@ jobs:
       
       - name: 'Build & Push Docker Image'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely:latest .
+
+      - name: 'Deploy to Cloud Run'
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely --region us-central1 --allow-unauthenticated --project notely-469712  --max-instances=4
