--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -30,8 +33,18 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
       
+      - name: 'Get goose'
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+      
+      - name: 'Check goose version'
+        run: goose --version
+
       - name: 'Build & Push Docker Image'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely:latest .
+
+      - name: 'Run DB Migrations'
+        run: |
+          goose -dir ./sql/schema turso "${{ secrets.DATABASE_URL }}" up
 
       - name: 'Deploy to Cloud Run'
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely --region us-central1 --allow-unauthenticated --project notely-469712  --max-instances=4
