--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,8 +43,7 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely:latest .
 
       - name: 'Run DB Migrations'
-        run: |
-          goose -dir ./sql/schema turso "${{ secrets.DATABASE_URL }}" up
+        run: ./scripts/migrateup.sh
 
       - name: 'Deploy to Cloud Run'
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-469712/notely-ar-repo/whynay-notely --region us-central1 --allow-unauthenticated --project notely-469712  --max-instances=4
